--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,7 +104,7 @@
     <string name="label_setting_locale_title">Change Application Language</string>
     <string name="action_notification">Notification</string>
     <string name="label_alarm_daily_reminder">Good morning! Ready to pick your new movies today?</string>
-    <string name="label_alarm_released_today"> Now On Cinema!</string>
+    <string name="label_alarm_released_today">, Now On Cinema!</string>
     <string name="label_daily_reminder">Daily Reminder Notification is now</string>
     <string name="label_activated">activated!</string>
     <string name="label_deactivated">deactivated!</string>
