--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -15,7 +15,26 @@
     <string name="upcoming">Akan Tayang</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="settings">Pengaturan</string>
     <string name="search_movie">Cari Film</string>
+
+    <string name="favorite">Favorite</string>
+    <string name="default_notification_channel_name">Favorit</string>
+    <string name="title_activity_settings">Pengaturan</string>
+
+    <string name="pref_header_notifications">Notifikasi</string>
+    <string name="daily_reminder">Pengingat Setiap Hari</string>
+    <string name="released_today">Pengingat Rilis Film</string>
+    <string name="key_daily_reminder">key_daily_reminder</string>
+    <string name="key_released_today">key_released_today</string>
+    <string name="key_settings_locale">key_settings_locale</string>
+    <string name="label_setting_daily_reminder_summary">Matikan/Nyalakan Notifikasi</string>
+    <string name="label_setting_locale_summary">Ganti Bahasa Aplikasi</string>
+    <string name="label_setting_locale_title">Ganti Bahasa Aplikasi</string>
+    <string name="action_notification">Notifikasi</string>
+    <string name="label_alarm_daily_reminder">Selamat Pagi! Sudah cek Film Hari ini?</string>
+    <string name="label_alarm_released_today">, Sekarang ada di Bioskop!</string>
+    <string name="label_daily_reminder">Notifikasi Pengingat Setiap Hari</string>
+    <string name="label_activated">aktif!</string>
+    <string name="label_deactivated">tidak aktif!</string>
 </resources>
